--- a/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
+++ b/python/Jupyter_Notebooks/Tracker Visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 554,
    "id": "25900946-2351-4d40-a84f-2a9ebf320579",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 555,
    "id": "4d955e93-e774-45a3-92fd-06395b1e4635",
    "metadata": {},
    "outputs": [
@@ -36,19 +36,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-02-28_PredictionLevelMIL_mfcc_mfcc_mil_combined_cough_bag_statistics_linear_combination4.pickle\n",
+      "Loading Tracker from: D:/Archiv/Studium/Master/6.-Semester/Masters_Thesis/Git/acoustic_covid_detection/python/run/tracker_saves/2023-03-02_PredictionLevelMIL_mfcc_mfcc_mil_combined_cough_7bagStatistics_variedBagsize_variedNeurons_hlayers1.pickle\n",
       "\n",
       "Parameters used for finding the best performing epoch:\n",
       "           metric_used:                   auc_roc\n",
       "           smoothing:                     5\n",
-      "           ignore_first_n_epochs:         5\n",
+      "           ignore_first_n_epochs:         5\n"
+     ]
+    }
+   ],
+   "source": [
+    "tracker = load_tracker()\n",
+    "# tracker.summarize(detail=\"compact\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 556,
+   "id": "5c6806ad-f200-435b-99fc-b504c286d8d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Datasets used:\n",
       "mfcc_mil_combined_cough\n",
       "           dataset_class:                 <class 'datasets.MultipleInstanceLearningMFCC'>\n",
       "           participants_file:             2023_02_23_mfcc_combined_coughs_3s.pickle\n",
       "           augmented_files:               ['2023_02_23_mfcc_combined_coughs_3s_7xaugmented.pickle', '2023_02_26_mfcc_combined_coughs_3s_x2x2augmented.pickle']\n",
-      "           train_set_label_counts:        label '0': 4292  -  label '1': 2700\n",
+      "           train_set_label_counts:        label '0': 4296  -  label '1': 2600\n",
       "           types_of_recording:            combined_coughs\n",
       "\n",
       "Audio Processing Parameters:\n",
@@ -75,32 +93,72 @@
       "           PitchShift:                    'probability': 0.8, 'min_semitones': -2, 'max_semitones': 2\n",
       "           TimeStretch:                   'probability': 0.8, 'min_rate': 0.95, 'max_rate': 1.05\n",
       "           Gain:                          'probability': 0.8, 'min_gain_in_db': -18, 'max_gain_in_db': 12\n",
-      "           model:                         PredLevelMIL\n",
-      "           optimizer:                     Adam \n",
-      "           loss_function:                 BCEWithLogitsLoss\n",
+      "______________________________________________________________\n",
+      "model:\n",
+      "PredLevelMIL(\n",
+      "  (conv_layers): Sequential(\n",
+      "    (0): Conv2d(1, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+      "    (1): ReLU()\n",
+      "    (2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "    (3): Conv2d(64, 32, kernel_size=(2, 2), stride=(1, 1))\n",
+      "    (4): ReLU()\n",
+      "    (5): BatchNorm2d(32, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+      "    (6): Flatten(start_dim=1, end_dim=-1)\n",
+      "  )\n",
+      "  (linear_layers): Sequential(\n",
+      "    (0): Linear(in_features=20320, out_features=256, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Dropout(p=0.5, inplace=False)\n",
+      "    (3): Linear(in_features=256, out_features=128, bias=True)\n",
+      "    (4): ReLU()\n",
+      "    (5): Dropout(p=0.3, inplace=False)\n",
+      "    (6): Linear(in_features=128, out_features=1, bias=True)\n",
+      "  )\n",
+      "  (mil_attention): Sequential(\n",
+      "    (0): Linear(in_features=7, out_features=64, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=64, out_features=1, bias=True)\n",
+      "  )\n",
+      ")\n",
+      "______________________________________________________________\n",
+      "optimizer:\n",
+      "Adam (\n",
+      "Parameter Group 0\n",
+      "    amsgrad: False\n",
+      "    betas: (0.9, 0.999)\n",
+      "    capturable: False\n",
+      "    eps: 1e-08\n",
+      "    foreach: None\n",
+      "    initial_lr: 5e-05\n",
+      "    lr: 5e-05\n",
+      "    maximize: False\n",
+      "    weight_decay: 0.0001\n",
+      ")\n",
+      "______________________________________________________________\n",
+      "loss_function:\n",
+      "BCEWithLogitsLoss()\n",
       "\n",
       "Tracker contains:\n",
-      "           parameter runs:                1\n",
+      "           parameter runs:                9\n",
       "           folds per run:                 1\n",
-      "           epochs:                        80\n"
+      "           epochs:                        200\n"
      ]
     }
    ],
    "source": [
-    "tracker = load_tracker()\n",
-    "tracker.summarize(detail=\"compact\")"
+    "tracker.summarize(detail=\"detail\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 557,
    "id": "5277788f-7ece-4a1e-8160-555c08ad3693",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4918e1454c2a43178d7409ee4b8ed56f",
+       "model_id": "f1e86354337a4a6b850d378fc86bb9f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 558,
    "id": "f05b3fcd-7bd6-41c7-9027-e462fe98e811",
    "metadata": {},
    "outputs": [
@@ -170,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 559,
    "id": "d542739c-2cb0-4fef-a26c-0e4926bed5f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b48a0a5abcb4aa58bfc725737a6effd",
+       "model_id": "d9ced7e920ab4fa6abf07dc6f21d9a01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -199,10 +257,10 @@
     "    style = tracker.style_metric_performance_df(df, sort_by=sort_descending_by_metric, highlight_hyperparameters=highlight_hyperparameters, filter_thresholds=kwargs)\n",
     "    return style\n",
     "_ = widgets.interact(sortby, sort_descending_by_metric=tracker.metrics_used, highlight_hyperparameters=True, show_full_df=False,\n",
-    "                auc_roc=widgets.FloatSlider(min=0.0, max=1.0, value=0.7, step=0.005),\n",
-    "                accuracy=widgets.FloatSlider(min=0.0, max=1.0, value=0.7, step=0.005),\n",
+    "                auc_roc=widgets.FloatSlider(min=0.0, max=1.0, value=0.6, step=0.005),\n",
+    "                accuracy=widgets.FloatSlider(min=0.0, max=1.0, value=0.6, step=0.005),\n",
     "                tpr=widgets.FloatSlider(min=0.0, max=1.0, value=0.4, step=0.005),\n",
-    "                tnr=widgets.FloatSlider(min=0.0, max=1.0, value=0.8, step=0.005)\n",
+    "                tnr=widgets.FloatSlider(min=0.0, max=1.0, value=0.6, step=0.005)\n",
     "                )"
    ]
   },
@@ -218,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 560,
    "id": "2f253649-2a96-486f-8eca-61058c080721",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "551ad021d0f849b8a241f727f2abac73",
+       "model_id": "b8dba4a60eaa467ba3075deb249180ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -259,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 561,
    "id": "3407a633-e593-4d24-86b0-afb12c88baf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1490c59d38164fa1be856d6a507ad712",
+       "model_id": "ae5f9ca888b14138aaf8afcbc5f64493",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,15 +341,15 @@
     "                     mode=[\"eval\", \"train\"], \n",
     "                     metric=tracker.metrics_used, \n",
     "                     n_samples_for_smoothing=widgets.IntSlider(value=tracker.performance_eval_params[\"smoothing\"], min=1, max=15), \n",
-    "                     show_separate_folds=False, \n",
+    "                     show_separate_folds=True, \n",
     "                     show_std_area_plot=False,\n",
-    "                     show_n_best_runs=widgets.IntSlider(value=5, min=1, max=tracker.n_hyperparameter_runs),\n",
+    "                     show_n_best_runs=widgets.IntSlider(value=10, min=1, max=tracker.n_hyperparameter_runs),\n",
     "                     color_by_hyperparameter=[None, *tracker.hyperparameters])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 551,
    "id": "ab612294-eca8-489d-8743-794ae7278edf",
    "metadata": {
     "tags": []
@@ -309,12 +367,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 512,
    "id": "a9948dab-cc00-4282-9254-04f0a52da1a2",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a15b6ac4d414ff4aab1e0c00e40ab08",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='run_id', options=(\"{'batch': '1', 'lr': '5e-05', 'wd': '0.0001', '…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "_ = widgets.interact(tracker.show_single_run, \n",
     "                 run_id=get_list_of_best_n_runs(sort_by_metric=True, metric=\"auc_roc\"),\n",
@@ -335,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 352,
    "id": "fab5b5b8-c565-4899-8d90-fb9abc0249a8",
    "metadata": {},
    "outputs": [],
@@ -346,10 +419,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 353,
    "id": "dc0571c5-1275-4792-a36e-937d0c4cdf2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-0.2291,  0.9149,  1.0514,  0.7606,  1.7378,  0.6437,  0.3877,  1.0420],\n",
+       "       requires_grad=True)"
+      ]
+     },
+     "execution_count": 353,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = torch.randn((8))\n",
     "a.requires_grad = True\n",
@@ -358,12 +443,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 354,
    "id": "44fd4ec0-bf0f-42e8-befb-58cbcf5c02de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a.mean(), a.median(), a.std(), a.min(), a.max()"
+    "mean1=a.mean()\n",
+    "median=a.median()\n",
+    "std1=torch.pow(torch.mean(torch.pow(diffs, 2.0)), 0.5)\n",
+    "\n",
+    "minimum=a.min()\n",
+    "maximum=a.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "id": "d64754ec-b51d-4773-84ea-6e048b07016a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(-0.2176, grad_fn=<MeanBackward0>),\n",
+       " tensor(-1.5399, grad_fn=<SubBackward0>))"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array=a\n",
+    "mean = torch.mean(array)\n",
+    "diffs = array - mean\n",
+    "var = torch.mean(torch.pow(diffs, 2.0))\n",
+    "std = torch.pow(var, 0.5)\n",
+    "zscores = diffs / std\n",
+    "skews = torch.mean(torch.pow(zscores, 3.0))\n",
+    "kurtoses = torch.mean(torch.pow(zscores, 4.0)) - 3.0 \n",
+    "skews, kurtoses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "id": "2926e2f3-b1a8-4fa8-bea5-c4e3459d34cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(1.0522, grad_fn=<PowBackward0>),\n",
+       " tensor(1.0522, grad_fn=<PowBackward0>))"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "std1, std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "id": "eab04444-fc92-432f-930c-86413019dfde",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(-0.2176, grad_fn=<MeanBackward0>),\n",
+       " tensor(-1.5399, grad_fn=<SubBackward0>))"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z_scores=(a-mean)/std1\n",
+    "torch.mean(torch.pow(z_scores, 3)), torch.mean(torch.pow(z_scores, 4))-3 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "id": "6723767f-b80b-4ab2-bcf3-9d3b5e271b4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-0.21760963799475835, -1.539940012571929)"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scipy.stats.skew(a.detach().numpy()), scipy.stats.kurtosis(a.detach().numpy())"
    ]
   },
   {
