--- a/python/Jupyter_Notebooks/Untitled1.ipynb
+++ b/python/Jupyter_Notebooks/Untitled1.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f6b7159f-e211-4b11-bd74-b17ba1e4a156",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\Archiv\\Studium\\Master\\6.-Semester\\Masters_Thesis\\Git\\acoustic_covid_detection\\python\n"
+     ]
+    }
+   ],
    "source": [
     "from jupyter_utils import jupyter_setup\n",
     "jupyter_setup()\n",
@@ -100,6 +108,134 @@
    "outputs": [],
    "source": [
     "my_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "61062dc8-58ed-4a26-b261-e3fbb7c7aad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 2, 3])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = torch.arange(30).view((5,2,3))\n",
+    "b = (torch.arange(30)+100).view((5,2,3))\n",
+    "c = (torch.arange(30)+1000).view((5,2,3))\n",
+    "\n",
+    "# a = a.unsqueeze(0)\n",
+    "# b = b.unsqueeze(0)\n",
+    "# c = c.unsqueeze(0)\n",
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ea373823-e201-462c-8ba4-8195a4783af5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 5, 2, 3])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abc = torch.stack([a, b, c])\n",
+    "abc.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d80fa17e-87d1-4d68-8be2-8272daed3aec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0,  1,  2],\n",
+       "         [ 3,  4,  5]],\n",
+       "\n",
+       "        [[ 6,  7,  8],\n",
+       "         [ 9, 10, 11]],\n",
+       "\n",
+       "        [[12, 13, 14],\n",
+       "         [15, 16, 17]],\n",
+       "\n",
+       "        [[18, 19, 20],\n",
+       "         [21, 22, 23]],\n",
+       "\n",
+       "        [[24, 25, 26],\n",
+       "         [27, 28, 29]]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "45918346-b0f8-4b55-8c2d-1c875136265a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([15, 2, 3])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abc_reshaped = abc.view(15,2,3)\n",
+    "abc_reshaped.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "d91722b5-8810-4f79-a7ea-470b9bc58c3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[18, 19, 20],\n",
+       "        [21, 22, 23]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abc_reshaped[3]"
    ]
   }
  ],
